--- a/src/Paginas/Registro/estilos.css
+++ b/src/Paginas/Registro/estilos.css
@@ -5,20 +5,27 @@
   justify-content: center;
   height: 100vh;
   font-family: Arial, sans-serif;
+  padding: 0;
 }
 
 .logo {
-  width: 150px;
+  width: 250px;
   margin-bottom: 20px;
 }
 
 .titulo {
-  font-size: 2rem;
+  display: flex;
+  font-size: 1rem;
   margin-bottom: 20px;
+  width: 400px;
+}
+
+.titulo :nth-child(2) {
+  color:rgb(108, 185, 124);
 }
 
 .formulario {
-  width: 80%;
+  width: 100%;
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -34,11 +41,7 @@
 .inputWrapper {
   display: flex;
   align-items: center;
-}
-
-.etiqueta {
-  font-size: 0.9rem;
-  color: #555;
+  position: relative;
 }
 
 .input {
@@ -49,14 +52,16 @@
   flex-grow: 1;
 }
 
-.verContraseñaBtn {
-  padding: 10px;
-  margin-left: 10px;
-  font-size: 0.9rem;
-  background-color: #ccc;
+.verContrasenaBtn {
+  position: absolute;
+  right: 10px;
+  background: none;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
+  font-size: 1.2rem;
+  color: #888;
+  display: flex;
+  align-items: center;
 }
 
 .boton {
