--- a/src/Paginas/Registro/estilos.css
+++ b/src/Paginas/Registro/estilos.css
@@ -14,10 +14,11 @@
 }
 
 .titulo {
+  width: 100%;
+  max-width: 400px;
   display: flex;
   font-size: 1rem;
   margin-bottom: 20px;
-  width: 400px;
 }
 
 .titulo :nth-child(2) {
