--- a/src/Paginas/Olvidoclave/estilos.css
+++ b/src/Paginas/Olvidoclave/estilos.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100vh;
     font-family: Arial, sans-serif;
-    padding: 0;
+    padding: 20px;
   }
   
   .logo {
