--- a/src/Paginas/Olvidoclave/estilos.css
+++ b/src/Paginas/Olvidoclave/estilos.css
@@ -9,7 +9,7 @@
   }
   
   .logo {
-    width: 320px;
+    width: 120px;
     margin-bottom: 20px;
   }
   
@@ -19,6 +19,7 @@
     display: flex;
     font-size: 1rem;
     margin-bottom: 20px;
+    justify-content: center;
   }
   
   .titulo :nth-child(2) {
