--- a/src/Paginas/Olvidoclave/estilos.css
+++ b/src/Paginas/Olvidoclave/estilos.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     height: 100vh;
     font-family: Arial, sans-serif;
     padding: 20px;
@@ -54,7 +54,7 @@
     flex-grow: 1;
   }
   
- 
+/*  
   .boton {
     padding: 10px;
     margin-top: 35px;
@@ -64,6 +64,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
+  } */
   
   
