--- a/src/Paginas/SeleccionEstados/estilos.css
+++ b/src/Paginas/SeleccionEstados/estilos.css
@@ -60,7 +60,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
     border-bottom: 1px solid #e0e0e0; /* Añadir borde inferior */
