--- a/src/Componentes/BotonSencillo/estilos.css
+++ b/src/Componentes/BotonSencillo/estilos.css
@@ -32,10 +32,9 @@
 
 .boton-rojo {
     background-color: #F44336;
-    width: 100%;
-    max-width: 400px;
+    min-width: 350px;
+    margin-top: 20px;
     padding: 10px;
-    margin-top: 35px;
     font-size: 1rem;
     color: #fff;
     border: none;
