--- a/src/Componentes/FiltradoPlacas/estilos.css
+++ b/src/Componentes/FiltradoPlacas/estilos.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 1rem 0;
+  margin: 0;
 }
 
 .FiltradoPlacas-label {
