--- a/src/Componentes/ContenedorTarjetas/estilos.css
+++ b/src/Componentes/ContenedorTarjetas/estilos.css
@@ -4,6 +4,7 @@
   padding-top: 150px; /* Espacio para el contenedor fijo */
   width: 100%;
   margin: 0 auto;
+  margin-bottom: 80px;
   font-family: Arial, sans-serif;
 }
 
@@ -84,6 +85,25 @@
   text-align: center;
   margin-top: 20px;
   width: 100%;
+}
+
+.ContenedorTarjetas-total {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding-top:20px;
+  padding-bottom:20px;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  z-index: 1000;
+}
+
+.ContenedorTarjetas-total :nth-child(1){
+  font-size: 1.5rem;
 }
 
 /* Responsive Design */
