--- a/src/Paginas/Inicio/estilos.css
+++ b/src/Paginas/Inicio/estilos.css
@@ -1,3 +1,19 @@
+.inicio-loading-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed; /* Para asegurarlo en la pantalla */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; /* Ocupa toda la pantalla */
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
+  z-index: 1000; /* Asegura que esté encima de otros elementos */
+  text-align: center; /* Centra el texto */
+}
+
+
 .verContrasenaBtn {
   position: absolute;
   right: 10px;
