--- a/src/Componentes/TarjetaDetalle/estilos.css
+++ b/src/Componentes/TarjetaDetalle/estilos.css
@@ -30,3 +30,12 @@
     margin-top: 10px; /* Espacio entre el spinner y el texto */
   }
   
+  .icono-novedad {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-size: 16px;
+    color: red;
+    cursor: pointer;
+  }
+  
