--- a/src/Paginas/DetalleEstados/estilos.css
+++ b/src/Paginas/DetalleEstados/estilos.css
@@ -8,7 +8,7 @@
     min-height: 100vh;
     background-color: #f4f4f9;
     box-sizing: border-box;
-    padding-top: 80px; /* Espacio para la cabecera fija */
+    padding-top: 80px;
 }
 
 /* Cabecera fija */
