--- a/src/Paginas/SalaEspera/estilos.css
+++ b/src/Paginas/SalaEspera/estilos.css
@@ -34,6 +34,7 @@
   border-radius: 8px; /* Bordes más redondeados */
   transition: all 0.3s ease; 
   margin: 10px;
+  cursor: pointer;
 }
 
 .SalaEspera-boton:hover {
