--- a/src/Paginas/SalaEspera/estilos.css
+++ b/src/Paginas/SalaEspera/estilos.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   text-align: center;
   font-family: Arial, sans-serif;
   padding: 20px;
@@ -59,3 +59,35 @@
   width: 120px;
   margin-bottom: 20px;
 }
+
+.SalaEspera-cerrar-sesion {
+  cursor: pointer;
+  color: #f44336; 
+  font-size: 16px;
+  text-decoration: underline;
+  transition: color 0.3s ease;
+  margin-top: 40px; 
+  display: inline-block;
+  padding: 10px 20px; /* Agregado un poco de padding */
+  text-align: right;
+}
+
+.SalaEspera-cerrar-sesion:hover {
+  color: #d32f2f; /* Cambiar color al pasar el mouse */
+}
+
+.SalaEspera-cerrar-sesion-container {
+  display: flex;
+  justify-content: flex-end; /* Mover a la derecha */
+  padding-right: 20px; /* Espacio a la derecha */
+}
+
+
+/* Ajustes para pantallas pequeñas */
+@media (max-width: 600px) {
+  .SalaEspera-contenedor {
+    justify-content: start;
+
+  }  
+}
+
