--- a/src/Paginas/PaginaIntegra/estilos.css
+++ b/src/Paginas/PaginaIntegra/estilos.css
@@ -11,8 +11,14 @@
 }
 
 .PaginaIntegra-logo{
-width: 40px;
+  width: 40px;
+  z-index: 2500000;
 }
+
+.PaginaIntegra-logo2{
+  display: none;
+}
+
 
 .PaginaIntegra-encabezado {
   background-color: #000000;
@@ -297,12 +303,20 @@ width: 40px;
   }
 
   .PaginaIntegra-titulo {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
     margin-top: 100px;
   }
 
   .PaginaIntegra-btn-carrusel {
     top:30%;
+  }
+
+  .PaginaIntegra-logo2{
+    position: fixed;
+    display: flex;
+    left: 40%;
+    top:40%;
+    width: 60px;
   }
 }
