--- a/src/Paginas/PaginaIntegra/estilos.css
+++ b/src/Paginas/PaginaIntegra/estilos.css
@@ -93,7 +93,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la pantalla */
+  height: 100%; /* Asegura que el contenedor ocupe toda la altura de la pantalla */
   position: relative;
   overflow: hidden;
 }
