--- a/src/Componentes/HojaVida/P1InformarDocumentos.css
+++ b/src/Componentes/HojaVida/P1InformarDocumentos.css
@@ -1,12 +1,12 @@
 /* Archivo: P1InformarDocumentos.css */
 
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
   color: #333;
-}
+} */
 
 .P1InformarDocumentos-contenedor-principal{
   overflow-y: auto;
