--- a/src/Paginas/Inicio/estilos.css
+++ b/src/Paginas/Inicio/estilos.css
@@ -1,20 +1,85 @@
+.inicio-contenedor {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  min-height: 100vh; /* Para asegurar que ocupe toda la pantalla */
+}
+
 .inicio-loading-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: fixed; /* Para asegurarlo en la pantalla */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; /* Ocupa toda la pantalla */
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
-  z-index: 1000; /* Asegura que esté encima de otros elementos */
-  text-align: center; /* Centra el texto */
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+  text-align: center;
 }
 
+.inicio-titulo {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  justify-content: center;
+}
 
-.verContrasenaBtn {
+.inicio-titulo :nth-child(2) {
+  color:rgb(141, 199, 63);
+}
+
+.inicio-logo {
+  width: 150px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.inicio-formulario {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 400px;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.inicio-contenedorInput {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.inicio-etiqueta {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.inicio-inputWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.inicio-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.inicio-verContrasenaBtn {
   position: absolute;
   right: 10px;
   background: none;
@@ -26,7 +91,7 @@
   align-items: center;
 }
 
-.pieDePagina {
+.inicio-pieDePagina {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -34,16 +99,31 @@
   gap: 10px;
 }
 
-.enlace {
-  color: #0056b3;
+.inicio-enlace {
+  color: #04088b;
   text-decoration: none;
   font-size: 0.9rem;
   margin-top: 10px;
+  font-weight: bold;
 }
 
-.mensajeError {
-  color: red; /* Color rojo para el mensaje de error */
-  margin-top: 10px; /* Espaciado superior */
-  font-weight: bold; /* Texto en negrita */
-  text-align: center; /* Centrar el mensaje */
+.inicio-enlace:hover {
+  text-decoration: underline;
 }
+
+.inicio-mensajeError {
+  color: red;
+  margin-top: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+
+ /* Ajustes para pantallas pequeñas */
+ @media (max-width: 600px) {
+  .inicio-logo {
+    width: 100px;
+  }  
+}
+
+
