--- a/src/Paginas/Olvidoclave/estilos.css
+++ b/src/Paginas/Olvidoclave/estilos.css
@@ -1,4 +1,4 @@
-.contenedor {
+.Olvidoclave-contenedor {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,14 +6,15 @@
     height: 100vh;
     font-family: Arial, sans-serif;
     padding: 20px;
+    background-color: aqua;
   }
   
-  .logo {
+  .Olvidoclave-logo {
     width: 120px;
     margin-bottom: 20px;
   }
   
-  .titulo {
+  .Olvidoclave-titulo {
     width: 100%;
     max-width: 400px;
     display: flex;
@@ -22,11 +23,11 @@
     justify-content: center;
   }
   
-  .titulo :nth-child(2) {
+  .Olvidoclave-titulo :nth-child(2) {
     color:rgb(141, 199, 63);
   }
   
-  .formulario {
+  .Olvidoclave-formulario {
     width: 100%;
     max-width: 400px;
     display: flex;
@@ -34,13 +35,13 @@
     gap: 15px;
   }
   
-  .contenedorInput {
+  .Olvidoclave-contenedorInput {
     display: flex;
     flex-direction: column;
     gap: 5px;
   }
   
-  .inputWrapper {
+  .Olvidoclave-inputWrapper {
     display: flex;
     align-items: center;
     position: relative;
