--- a/src/Paginas/Registro/estilos.css
+++ b/src/Paginas/Registro/estilos.css
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* height: 100vh; */
   font-family: Arial, sans-serif;
 }
 
@@ -86,4 +85,9 @@
   .Registro-Logo {
     width: 100px;
   }  
+
+  .Registro-Contenedor {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
