--- a/src/Paginas/SalaEspera/estilos.css
+++ b/src/Paginas/SalaEspera/estilos.css
@@ -3,12 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: calc(100vh - 40px);
   text-align: center;
   font-family: Arial, sans-serif;
-  padding: 20px;
-  background-color: #f9f9f9; /* Fondo suave */
-}
+  }
 
 .SalaEspera-titulo {
   font-size: 2rem;
@@ -87,7 +85,7 @@
 @media (max-width: 600px) {
   .SalaEspera-contenedor {
     justify-content: start;
-
+    margin: 20px;
   }  
 }
 
