se crea secciones para subir datos

--- a/src/Paginas/FormularioHojavida/estilos.css
+++ b/src/Paginas/FormularioHojavida/estilos.css
@@ -1,6 +1,7 @@
-.FormularioHojavida-Contenedor{
+.FormularioHojavida-Contenedor {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
+    overflow: hidden; /* Esto evita que el hijo se desborde más allá del padre */
+  }
