--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none; /* Elimina subrayados */
+  text-decoration: none;
+  font-family: Arial, sans-serif;
 }
