--- a/src/Paginas/PaginaIntegra/estilos.css
+++ b/src/Paginas/PaginaIntegra/estilos.css
@@ -21,7 +21,7 @@
 
 
 .PaginaIntegra-encabezado {
-  background-color: #000000;
+  background-color: #2c3e50;
   width: 100%;
   color: #fff;
   display: flex;
@@ -71,7 +71,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #000;
+  background-color: #2c3e50;
   position: absolute;
   height: 90vh;
   top: 40px;
@@ -128,9 +128,6 @@
   margin-top: 10px;
 }
 
-
-
-
 .PaginaIntegra-busqueda {
   display: flex;
   justify-content: center;
@@ -141,7 +138,7 @@
 }
 
 .PaginaIntegra-busqueda-input{
-  background-color: #000000;
+  background-color: #2c3e50;
   padding: 12px;
   border-radius: 35px;
 }
@@ -164,7 +161,7 @@
 }
 
 .PaginaIntegra-opciones {
-  background-color: rgb(0, 0, 0,0.7);
+  background-color: rgba(44, 62, 80, 0.7);
   display: flex;
   position: fixed;
   color:white;
@@ -177,6 +174,8 @@
   flex-wrap: wrap;
   z-index: 500;
   bottom: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .PaginaIntegra-opcion {
@@ -184,6 +183,10 @@
   text-align: center;
   max-width: 150px;
   color:white;
+}
+
+.PaginaIntegra-opcion svg {
+  font-size: 3rem;
 }
 
 .PaginaIntegra-opcion:hover {
