--- a/src/Componentes/DisenoServicio/estilos.css
+++ b/src/Componentes/DisenoServicio/estilos.css
@@ -19,6 +19,14 @@
   border-radius: 10px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   height: 100%;
+  overflow-y: auto;
+}
+
+.DisenoServicio-panel-izquierdo ul {
+  flex-grow: 1;
+  /* overflow-y: auto; */
+  padding-bottom: 20px;
+  max-height: calc(100% - 20px);
 }
 
 .DisenoServicio-panel-derecho {
@@ -52,10 +60,6 @@
   margin-bottom: 10px;
   cursor: grab;
   transition: transform 0.2s ease;
-}
-
-.DisenoServicio-categoria:hover {
-  transform: scale(1.05);
 }
 
 .DisenoServicio-categoria svg {
